motyga-rs/tui/src/bottom_pane/snapshots/motyga_tui__bottom_pane__feedback_view__tests__feedback_upload_consent_lists_doctor_report.snap
---
source: tui/src/bottom_pane/feedback_view.rs
expression: rendered
---
Upload logs?

The following files will be sent:
  • motyga-logs.log
  • motyga-doctor-report.json
  • rollout.jsonl
  • auto-review-rollout.jsonl
